ipc/ipdl/test/ipdl/ok/PDeleteSub.ipdl
include protocol PDelete;

sync protocol PDeleteSub {
    manager PDelete;

parent:
    async __delete__(int x);

};

