ipc/ipdl/test/ipdl/error/asyncMessageListed.ipdl
protocol asyncMessageListed {
parent:
    async Msg();
};
